--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,8 @@
   "version": "v1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@react-pdf/renderer": "^2.2.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
@@ -23,6 +25,7 @@
     "react-scripts": "5.0.0",
     "react-social-login-buttons": "^3.6.1",
     "react-tsparticles": "^1.42.2",
+    "react-web-qr-reader": "^1.0.4",
     "typewriter-effect": "^2.18.2",
     "web-vitals": "^2.1.4"
   },
